--- a/ui/src/main/resources/stat.fxml
+++ b/ui/src/main/resources/stat.fxml
@@ -6,8 +6,13 @@
 <?import javafx.scene.control.*?>
 <?import javafx.scene.layout.*?>
 
-<AnchorPane xmlns="http://javafx.com/javafx"
+<GridPane xmlns="http://javafx.com/javafx"
             xmlns:fx="http://javafx.com/fxml"
             fx:controller="bmstu.dynamic.simulator.controller.StatController" visible="false">
-
-</AnchorPane>
+    <rowConstraints>
+        <RowConstraints/>
+    </rowConstraints>
+    <columnConstraints>
+        <ColumnConstraints/>
+    </columnConstraints>
+</GridPane>
