--- a/ui/src/main/resources/ml.fxml
+++ b/ui/src/main/resources/ml.fxml
@@ -11,6 +11,7 @@
             fx:controller="bmstu.dynamic.simulator.controller.MLController" visible="false">
     <rowConstraints>
         <RowConstraints minHeight="15"/>
+        <RowConstraints minHeight="30"/>
         <RowConstraints vgrow="ALWAYS"/>
         <RowConstraints minHeight="15"/>
     </rowConstraints>
@@ -19,5 +20,5 @@
         <ColumnConstraints hgrow="ALWAYS"/>
         <ColumnConstraints minWidth="15"/>
     </columnConstraints>
-    <Label text="Обучение модели" GridPane.columnIndex="1" GridPane.rowIndex="0"/>
+    <Label text="Обучение модели" GridPane.columnIndex="1" GridPane.rowIndex="1" GridPane.halignment="CENTER"/>
 </GridPane>
