--- a/ui/src/main/resources/stat.fxml
+++ b/ui/src/main/resources/stat.fxml
@@ -10,9 +10,15 @@
             xmlns:fx="http://javafx.com/fxml"
             fx:controller="bmstu.dynamic.simulator.controller.StatController" visible="false">
     <rowConstraints>
-        <RowConstraints/>
+        <RowConstraints minHeight="15"/>
+        <RowConstraints minHeight="30"/>
+        <RowConstraints vgrow="ALWAYS"/>
+        <RowConstraints minHeight="15"/>
     </rowConstraints>
     <columnConstraints>
-        <ColumnConstraints/>
+        <ColumnConstraints minWidth="15"/>
+        <ColumnConstraints hgrow="ALWAYS"/>
+        <ColumnConstraints minWidth="15"/>
     </columnConstraints>
+    <Label text="Статистика" GridPane.columnIndex="1" GridPane.rowIndex="1" GridPane.halignment="CENTER"/>
 </GridPane>
