--- a/ui/src/main/resources/simulation.fxml
+++ b/ui/src/main/resources/simulation.fxml
@@ -16,6 +16,8 @@
         <RowConstraints minHeight="30"/>
         <RowConstraints vgrow="ALWAYS"/>
         <RowConstraints minHeight="15"/>
+        <RowConstraints minHeight="50"/>
+        <RowConstraints minHeight="15"/>
     </rowConstraints>
     <columnConstraints>
         <ColumnConstraints minWidth="15"/>
@@ -24,6 +26,10 @@
     </columnConstraints>
     <Label text="Результат обучения" GridPane.columnIndex="1" GridPane.rowIndex="1" GridPane.halignment="CENTER"/>
 
-    <ImageView fx:id="imageView" GridPane.columnIndex="1" GridPane.rowIndex="2">
-    </ImageView>
+    <StackPane style="-fx-border-color: black; -fx-background-color: white" GridPane.columnIndex="1" GridPane.rowIndex="2">
+        <ImageView fx:id="imageView" GridPane.columnIndex="1" GridPane.rowIndex="2" visible="false">
+        </ImageView>
+    </StackPane>
+
+    <TextArea fx:id="logsDetection" GridPane.columnIndex="1" GridPane.rowIndex="4" editable="false"/>
 </GridPane>
