--- a/ui/src/main/resources/templates/error.html
+++ b/ui/src/main/resources/templates/error.html
@@ -364,7 +364,7 @@
                         <div class="error mx-auto">[[${status}]]</div>
                         <p class="lead text-gray-800 mb-5">[[${text}]]</p>
                         <p class="text-gray-500 mb-0">[[${additional_text}]]</p>
-                        <a th:href="@{/}">&larr; Back to Dashboard</a>
+                        <a th:href="@{/}">&larr; Назад в ЛК</a>
                     </div>
 
                 </div>
