--- a/ui/src/main/resources/templates/fragments/logout.html
+++ b/ui/src/main/resources/templates/fragments/logout.html
@@ -19,7 +19,10 @@
             <div class="modal-body">Select "Logout" below if you are ready to end your current session.</div>
             <div class="modal-footer">
                 <button class="btn btn-secondary" type="button" data-dismiss="modal">Cancel</button>
-                <a class="btn btn-primary" th:href="@{/login}">Logout</a>
+                <form th:action="@{/logout}" th:method="post">
+                    <input type="hidden" th:name="${csrf_name}" th:value="${csrf_token}" />
+                    <button class="btn btn-primary" value="submit">Logout</button>
+                </form>
             </div>
         </div>
     </div>
