--- a/ui/src/main/resources/templates/lk_error.html
+++ b/ui/src/main/resources/templates/lk_error.html
@@ -28,7 +28,7 @@
     <div id="wrapper">
 
         <!-- Sidebar -->
-        <!--div th:replace="fragments/sidebar :: sidebar"></div-->
+        <div th:replace="fragments/sidebar :: sidebar"></div>
         <!-- End of Sidebar -->
 
         <!-- Content Wrapper -->
@@ -38,11 +38,11 @@
             <div id="content">
 
                 <!-- Topbar -->
-                <!--div th:replace="fragments/topbar :: topbar"></div-->
+                <div th:replace="fragments/topbar :: topbar(${user_attributes.get('name')})"></div>
                 <!-- End of Topbar -->
 
                 <!-- Begin Page Content -->
-                <div class="container-fluid" style="margin-top: 50px; height: 60vh">
+                <div class="container-fluid">
 
                     <!-- 404 Error Text -->
                     <div class="text-center">
@@ -74,7 +74,7 @@
     </a>
 
     <!-- Logout Modal-->
-    <!--div th:replace="fragments/logout :: logout_modal"></div-->
+    <div th:replace="fragments/logout :: logout_modal"></div>
 
     <!-- Bootstrap core JavaScript-->
     <script th:src="@{/vendor/jquery/jquery.min.js}"></script>
