--- a/ui/src/main/resources/templates/login.html
+++ b/ui/src/main/resources/templates/login.html
@@ -71,10 +71,10 @@
                                     </form>
                                     <hr>
                                     <div class="text-center">
-                                        <a class="small" href="forgot-password.html">Forgot Password?</a>
+                                        <a class="small" th:href="@{/auth/forgot-password}">Forgot Password?</a>
                                     </div>
                                     <div class="text-center">
-                                        <a class="small" href="register.html">Create an Account!</a>
+                                        <a class="small" th:href="@{/auth/register}">Create an Account!</a>
                                     </div>
                                 </div>
                             </div>
