--- a/ui/src/main/resources/templates/register.html
+++ b/ui/src/main/resources/templates/register.html
@@ -74,10 +74,10 @@
                             </form>
                             <hr>
                             <div class="text-center">
-                                <a class="small" href="forgot-password.html">Forgot Password?</a>
+                                <a class="small" th:href="@{/auth/forgot-password}">Forgot Password?</a>
                             </div>
                             <div class="text-center">
-                                <a class="small" href="login.html">Already have an account? Login!</a>
+                                <a class="small" th:href="@{/auth/login}">Already have an account? Login!</a>
                             </div>
                         </div>
                     </div>
