--- a/ui/src/main/resources/templates/examples/utilities-animation.html
+++ b/ui/src/main/resources/templates/examples/utilities-animation.html
@@ -9,7 +9,7 @@
     <meta name="description" content="">
     <meta name="author" content="">
 
-    <title>SB Admin 2 - Animation Utilities</title>
+    <title>AdaptNet Sim - Animation Utilities</title>
 
     <!-- Custom fonts for this template-->
     <link th:href="@{/vendor/fontawesome-free/css/all.min.css}" rel="stylesheet" type="text/css">
@@ -18,7 +18,7 @@
         rel="stylesheet">
 
     <!-- Custom styles for this template-->
-    <link th:href="@{/css/sb-admin-2.min.css}" rel="stylesheet">
+    <link th:href="@{/css/capssim.css}" rel="stylesheet">
 
 </head>
 
@@ -180,7 +180,7 @@
     <script th:src="@{/vendor/jquery-easing/jquery.easing.min.js}"></script>
 
     <!-- Custom scripts for all pages-->
-    <script th:src="@{/js/sb-admin-2.min.js}"></script>
+    <script th:src="@{/js/capssim.min.js}"></script>
 
 </body>
 
