--- a/ui/src/main/resources/templates/profile.html
+++ b/ui/src/main/resources/templates/profile.html
@@ -9,7 +9,7 @@
     <meta name="description" content="">
     <meta name="author" content="">
 
-    <title>AdaptNet Sim - Undefined</title>
+    <title>AdaptNet Sim - Profile</title>
 
     <!-- Custom fonts for this template-->
     <link th:href="@{/vendor/fontawesome-free/css/all.min.css}" rel="stylesheet" type="text/css">
@@ -44,12 +44,34 @@
                 <!-- Begin Page Content -->
                 <div class="container-fluid">
 
-                    <!-- 404 Error Text -->
-                    <div class="text-center">
-                        <div class="error mx-auto">[[${status}]]</div>
-                        <p class="lead text-gray-800 mb-5">[[${text}]]</p>
-                        <p class="text-gray-500 mb-0">[[${additional_text}]]</p>
-                        <a th:href="@{/}">&larr; Назад в ЛК</a>
+                    <div class="card shadow mb-4">
+                        <div class="card-header py-3">
+                            <h3 class="m-0 font-weight-bold text-primary">Профиль пользователя</h3>
+                        </div>
+                        <div class="card-body">
+                            <div class="form-group row">
+                                <div class="col-sm-6 mb-3 mb-sm-0">
+                                    <label for="exampleFirstName">Имя</label>
+                                    <input type="text" class="form-control form-control-user" id="exampleFirstName"
+                                           placeholder="Имя" th:value="${user_attributes.get('given_name')}" disabled >
+                                </div>
+                                <div class="col-sm-6">
+                                    <label for="exampleLastName">Фамилия</label>
+                                    <input type="text" class="form-control form-control-user" id="exampleLastName"
+                                           placeholder="Фамилия" th:value="${user_attributes.get('family_name')}" disabled >
+                                </div>
+                            </div>
+                            <div class="form-group">
+                                <label for="exampleInputEmail">Электронная почта</label>
+                                <input type="email" class="form-control form-control-user" id="exampleInputEmail"
+                                       placeholder="Электронная почта" th:value="${user_attributes.get('email')}" disabled >
+                            </div>
+                            <div class="form-group">
+                                <label for="exampleUserName">Имя пользователя</label>
+                                <input type="email" class="form-control form-control-user" id="exampleUserName"
+                                       placeholder="Имя пользователя" th:value="${user_attributes.get('preferred_username')}" disabled >
+                            </div>
+                        </div>
                     </div>
 
                 </div>
