--- a/ui/src/main/resources/templates/settings.html
+++ b/ui/src/main/resources/templates/settings.html
@@ -9,7 +9,7 @@
     <meta name="description" content="">
     <meta name="author" content="">
 
-    <title>SB Admin 2 - Blank</title>
+    <title>AdaptNet Sim - Settings</title>
 
     <!-- Custom fonts for this template-->
     <link th:href="@{/vendor/fontawesome-free/css/all.min.css}" rel="stylesheet" type="text/css">
@@ -18,7 +18,7 @@
         rel="stylesheet">
 
     <!-- Custom styles for this template-->
-    <link th:href="@{/css/sb-admin-2.min.css}" rel="stylesheet">
+    <link th:href="@{/css/capssim.css}" rel="stylesheet">
 
 </head>
 
@@ -44,8 +44,14 @@
                 <!-- Begin Page Content -->
                 <div class="container-fluid">
 
-                    <!-- Page Heading -->
-                    <h1 class="h3 mb-4 text-gray-800">Blank Page</h1>
+                    <div class="card shadow mb-4">
+                        <div class="card-header py-3">
+                            <h3 class="m-0 font-weight-bold text-primary">Настройки</h3>
+                        </div>
+                        <div class="card-body">
+                            TODO: Здесь должны быть настройки
+                        </div>
+                    </div>
 
                 </div>
                 <!-- /.container-fluid -->
@@ -79,7 +85,7 @@
     <script th:src="@{/vendor/jquery-easing/jquery.easing.min.js}"></script>
 
     <!-- Custom scripts for all pages-->
-    <script th:src="@{/js/sb-admin-2.min.js}"></script>
+    <script th:src="@{/js/capssim.min.js}"></script>
 
 </body>
 
