--- a/ui-service/src/main/resources/templates/pages/error.html
+++ b/ui-service/src/main/resources/templates/pages/error.html
@@ -27,22 +27,14 @@
     <!-- Page Wrapper -->
     <div id="wrapper">
 
-        <!-- Sidebar -->
-        <!--div th:replace="fragments/sidebar :: sidebar"></div-->
-        <!-- End of Sidebar -->
-
         <!-- Content Wrapper -->
         <div id="content-wrapper" class="d-flex flex-column">
 
             <!-- Main Content -->
             <div id="content">
 
-                <!-- Topbar -->
-                <!--div th:replace="fragments/topbar :: topbar"></div-->
-                <!-- End of Topbar -->
-
                 <!-- Begin Page Content -->
-                <div class="container-fluid" style="margin-top: 50px; height: 60vh">
+                <div class="container-fluid" style="margin-top: 30vh; height: 100vh">
 
                     <!-- 404 Error Text -->
                     <div class="text-center">
@@ -58,10 +50,6 @@
             </div>
             <!-- End of Main Content -->
 
-            <!-- Footer -->
-            <div th:replace="fragments/footer :: footer(${copyright}, ${now_year})"></div>
-            <!-- End of Footer -->
-
         </div>
         <!-- End of Content Wrapper -->
 
@@ -72,9 +60,6 @@
     <a class="scroll-to-top rounded" href="#page-top">
         <i class="fas fa-angle-up"></i>
     </a>
-
-    <!-- Logout Modal-->
-    <!--div th:replace="fragments/logout :: logout_modal"></div-->
 
     <!-- Bootstrap core JavaScript-->
     <script th:src="@{/vendor/jquery/jquery.min.js}"></script>
