--- a/ui-service/src/main/resources/templates/fragments/video.html
+++ b/ui-service/src/main/resources/templates/fragments/video.html
@@ -26,11 +26,11 @@
                 <!-- Card Body -->
                 <div class="card-body">
                     <div class="form-group row justify-content-center">
-                        <div class="col-sm-8 mb-3 mb-sm-0">
+                        <div class="col-sm-10 mb-3 mb-sm-0">
                             <input type="text" class="form-control form-control-user" id="exampleFirstName"
                                    placeholder="http://путь_до_видео">
                         </div>
-                        <div class="col-sm-4">
+                        <div class="col-sm-1">
                             <a href="#" class="btn btn-success btn-circle">
                                 <i class="fas fa-check"></i>
                             </a>
@@ -52,7 +52,7 @@
                 </div>
                 <!-- Card Body -->
                 <div class="card-body">
-                    <img src="http://127.0.0.1:5000/video_feed/9XrNe8cpgqU" style="height: 100%; width: 100%"/>
+                    <img src="http://127.0.0.1:5000/video_feed/9XrNe8cpgqU" class="border" style="height: 100%; width: 100%; border-radius: 5px;"/>
                 </div>
             </div>
         </div>
