--- a/ui-service/src/main/resources/templates/fragments/video.html
+++ b/ui-service/src/main/resources/templates/fragments/video.html
@@ -47,11 +47,19 @@
                                    placeholder="Индекс Youtube-видео из URL, например, My_fX46HMH4"
                                    aria-label="Search" aria-describedby="basic-addon2">
                             <div class="input-group-append">
-                                <button class="btn btn-primary" type="button">
+                                <button id="start-detection-button" class="btn btn-primary" type="button">
                                     <i class="fas fa-check fa-sm"></i>
                                 </button>
                             </div>
                         </div>
+                    </div>
+                    <div class="form-group row justify-content-center">
+                        <a id="finish-detection-button" href="#" class="btn btn-primary btn-icon-split">
+                                        <span class="icon text-white-50">
+                                            <i class="fas fa-flag"></i>
+                                        </span>
+                            <span class="text">Прервать</span>
+                        </a>
                     </div>
                 </div>
             </div>
@@ -69,8 +77,7 @@
                 </div>
                 <!-- Card Body -->
                 <div class="card-body">
-                    <img id="video-content" th:src="@{/img/video-player-placeholder-very-large.png}"
-                         style="height: 100%; width: 100%; border-radius: 5px;"/>
+                    <img id="video-content" th:src="@{/img/video-player-placeholder-very-large.png}"/>
                 </div>
             </div>
         </div>
@@ -104,6 +111,19 @@
                         break;
                 }
             });
+
+            $('#start-detection-button').click(function () {
+                if ($('#youtube-video-radio-button').prop('checked') === true) {
+                    let url = '/video/youtube/' + $('#video-addr-input').prop('value');
+                    let video_content = $('#video-content')
+                    video_content.prop('src', url);
+                }
+            })
+
+            $('#finish-detection-button').click(function () {
+                let video_content = $('#video-content')
+                video_content.prop('src', '/img/video-player-placeholder-very-large.png');
+            })
         })
     </script>
 
