--- a/ui-service/src/main/resources/templates/layout.html
+++ b/ui-service/src/main/resources/templates/layout.html
@@ -21,6 +21,7 @@
     <!-- Custom styles for this template -->
     <link th:href="@{/css/capssim.css}" rel="stylesheet">
     <link th:href="@{/css/loader.css}" rel="stylesheet">
+    <link th:href="@{/css/video.css}" rel="stylesheet">
 
     <!-- Custom styles for this page -->
     <link th:href="@{/vendor/datatables/dataTables.bootstrap4.min.css}" rel="stylesheet">
