--- a/ui-service/src/main/resources/templates/fragments/logout.html
+++ b/ui-service/src/main/resources/templates/fragments/logout.html
@@ -20,7 +20,7 @@
             <div class="modal-footer">
                 <button class="btn btn-secondary" type="button" data-dismiss="modal">Cancel</button>
                 <form th:action="@{/logout}" th:method="post">
-                    <button class="btn btn-primary" value="submit">Logout</button>
+                    <button class="btn btn-primary" type="submit">Logout</button>
                 </form>
             </div>
         </div>
