--- a/ui-service/src/main/resources/templates/fragments/logout.html
+++ b/ui-service/src/main/resources/templates/fragments/logout.html
@@ -11,16 +11,16 @@
     <div class="modal-dialog" role="document">
         <div class="modal-content">
             <div class="modal-header">
-                <h5 class="modal-title" id="exampleModalLabel">Ready to Leave?</h5>
+                <h5 class="modal-title" id="exampleModalLabel">Вы точно хотите выйти?</h5>
                 <button class="close" type="button" data-dismiss="modal" aria-label="Close">
                     <span aria-hidden="true">×</span>
                 </button>
             </div>
-            <div class="modal-body">Select "Logout" below if you are ready to end your current session.</div>
+            <div class="modal-body">Выберитие "Выйти", если хотите завершить Вашу текущую сессию.</div>
             <div class="modal-footer">
-                <button class="btn btn-secondary" type="button" data-dismiss="modal">Cancel</button>
+                <button class="btn btn-secondary" type="button" data-dismiss="modal">Отмена</button>
                 <form th:action="@{/logout}" th:method="post">
-                    <button class="btn btn-primary" type="submit">Logout</button>
+                    <button class="btn btn-primary" type="submit">Выйти</button>
                 </form>
             </div>
         </div>
